source/css/video_thumbnails_mobile.css
/*
Copyright © 2026 Nikolaos Pantelidis
All rights reserved.

This file is part of Music Mode for YouTube.
Unauthorized copying, modification, or redistribution of this file is prohibited.

See the LICENSE file in the project root for full license terms.
*/

/* Mobile */
/* Image of thumbnail */
.ytThumbnailViewModelImage img,
/* Shorts in homepage */
ytm-shorts-lockup-view-model img,
/* Posts */
ytm-rich-section-renderer img {
  display: none !important;
}

/* Outter container of video time (recommended videos etc) */
.video-thumbnail-overlay-bottom-group {
  height: 100% !important;
}

/* Inner container of video time */
ytm-thumbnail-overlay-time-status-renderer {
  position: relative !important;
  background-color: #323232 !important;
}

/* Mixes */
.video-thumbnail-overlay-bottom-icon-text,
/* Playlists */
.video-thumbnail-overlay-bottom-icon {
  position: absolute;
  bottom: 0;
  background-color: #323232 !important;
}

/* Playlists, Mixes */
.radioBottomOverlayHost {
  height: 100% !important;
  width: 100% !important;
  display: flex !important;
  justify-content: center !important;
  align-items: center !important;
  margin: 0 !important;
  padding: 0 !important;
  background-color: #323232 !important;
}

/* Time container homepage */
yt-thumbnail-overlay-badge-view-model,
/* Time container in videos with progress bar */
.ytThumbnailBottomOverlayViewModelBadgeContainer,
ytm-thumbnail-overlay-time-status-renderer,
.video-thumbnail-overlay-bottom-icon-text,
.video-thumbnail-overlay-bottom-icon {
  display: flex !important;
  margin: 0 !important;
  padding: 0 !important;
  border-radius: 0 !important;
  width: 100% !important;
  height: 100% !important;
  justify-content: center !important;
  align-items: center !important;
}

/* Time container homepage */
yt-thumbnail-overlay-badge-view-model,
.ytThumbnailBottomOverlayViewModelBadgeContainer {
  background-color: #323232 !important;
}

/* Time container in videos with progress bar */
yt-thumbnail-bottom-overlay-view-model {
  height: 100% !important;
  flex-direction: column-reverse !important;
}

/* Normal video thumbnails */
.videoThumbnailGroupOverlayBottomLeftRightGroup {
  height: 100% !important;
}

/* Shorts in reel */
.reel-item-metadata {
  background-color: #323232 !important;
}

/* Playlists in the description of a video */
.video-thumbnail-overlay-side {
  width: 100% !important;
  background-color: #323232 !important;
}

/* Videos in the description of a video */
.yt-video-attribute-view-model__hero-section {
  display: none !important;
}

/* Collections in YouTube's Music channel */
.video-thumbnail-container-compact {
  background-image: url('../img/youtube_logo.svg') !important;
  background-repeat: no-repeat !important;
  background-position: center !important;
  background-size: 30% 30% !important;
  background-color: #323232 !important;
}

/* Hide Open in App button */
.mobile-topbar-header-sign-in-button {
  display: none !important;
}

/* Shorts in homepage */
ytm-shorts-lockup-view-model {
  background-color: #323232 !important;
}

/* Posts */
ytm-backstage-image-renderer {
  background-color: #323232 !important;
}

/* Time element in videos */
.ytBadgeShapeThumbnailBadge {
  background-color: #323232 !important;
}

